# SQLiteCpp

include/SQLiteCpp/: Database.h  Exception.h  Statement.h
sqlite3/: CMakeLists.txt  README.md  sqlite3.h
src/: Database.cpp  Exception.cpp  Statement.cpp
